--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ embedmysql/
 #Gradle stuff (from https://github.com/github/gitignore/blob/master/Gradle.gitignore)
 .gradle
 /build/
+/src/test/resources/sample-fragment-small.xml
+/src/test/resources/sample-small-10.xml
+/src/test/resources/sample-small-10-rewrite.xml
+/src/test/resources/sample-small-11.xml
+/src/test/resources/sample-small-11-bad-rewrite.xml
+/src/test/resources/sample-small-11-rewrite.xml
